--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -55,6 +55,29 @@
 
     }
 
+    .edit-btn{
+        position: static;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #0275d8;
+        color: white;
+        font-weight: bold;
+        transition: all 0.1s linear 0.1s;
+        margin-top: 1rem;
+        width: 6rem;
+        height: 2rem;
+        font-size: 1rem;
+        padding: 0.5rem;
+        
+
+        &:hover {
+            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 7px 0px;
+            transform: scale(1.1);
+        }
+    
+    }
+
 }
 
 
