--- a/src/global.scss
+++ b/src/global.scss
@@ -6,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #ffe4c4;
+  background-color: #e6e6e6;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
