--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -1,4 +1,4 @@
-.card{
+.card {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -7,17 +7,16 @@
     width: 250px;
     border-radius: 10px;
     box-shadow: rgba(100,100,111,0.2);
-    padding: 0;
-    background-color: whitesmoke;
     padding: 1rem;
+    background-color: whitesmoke;
 
-    .delete-btn{
+    .delete-btn {
         position: absolute;
         display: flex;
         align-items: center;
         justify-content: center;
-        top: calc(0% - 2px);
-        right: calc(0% - 2px);
+        top: -8px;
+        right: -8px;
         background-color: red;
         width: 2rem;
         height: 2rem;
@@ -25,59 +24,60 @@
         font-size: 1rem;
         color: white;
         padding: 0.5rem;
-        border-radius: 5px;
         cursor: pointer;
         z-index: 1;
-    
-        svg:hover{
+
+        svg:hover {
             transform: scale(1.1);
         }
-    
     }
-    
 
-    img{
+    img {
         border-radius: 50%;
-        width: 250px;
-        height: 250px;
+        width: 100%;
+        max-width: 250px;
+        height: auto;
         object-fit: cover;
     }
 
-    h2{
-        font-size: 36px;
+    h2 {
+        font-size: 24px;
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
         color: rgb(0, 0, 0);
-        
-    }
-    span{
-        font-size: 18px;
-        color: rgb(0, 0, 0);
-        text-align: left;
-
     }
 
-    .edit-btn{
-        position: static;
+    span {
+        font-size: 16px;
+        color: rgb(0, 0, 0);
+        text-align: center;
+    }
+
+    .edit-btn {
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: #0275d8;
         color: white;
         font-weight: bold;
-        transition: all 0.1s linear 0.1s;
+        transition: all 0.1s linear;
         margin-top: 1rem;
-        width: 6rem;
-        height: 2rem;
+        width: 100%;
         font-size: 1rem;
         padding: 0.5rem;
-        
 
         &:hover {
             box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 7px 0px;
             transform: scale(1.1);
         }
-    
     }
 
+    @media screen and (max-width: 480px) {
+        width: 100%;
+        max-width: 100%;
+        padding: 0.5rem;
+        margin-bottom: 1rem;
+        box-shadow: none;
+        border-radius: 0;
+    }
 }
-
-
