--- a/src/style.scss
+++ b/src/style.scss
@@ -47,9 +47,9 @@
         }
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1000px) {
         .card-grid {
-            grid-template-columns: (1fr, 1fr, 1fr); 
+            grid-template-columns:1fr, 1fr, 1fr; 
             padding: 5rem 0; 
         }
     }
